-Removed chances of mobs spawning with equipment and set mob drop chance to zero